--- a/azure-pipelines-frontend.yml
+++ b/azure-pipelines-frontend.yml
@@ -51,3 +51,17 @@ steps:
       codeCoverageTool: Cobertura
       summaryFileLocation: 'src/frontend/coverage/ToDoListApp/cobertura-coverage.xml'
       failIfCoverageEmpty: true
+
+  - task: ArchiveFiles@2
+    inputs:
+      rootFolderOrFile: 'src/frontend/dist/ToDoListApp'
+      includeRootFolder: false
+      archiveType: 'zip'
+      archiveFile: '$(Build.ArtifactStagingDirectory)/frontend/frontend.zip'
+      replaceExistingArchive: true
+
+  - task: PublishPipelineArtifact@1
+    inputs:
+      targetPath: '$(Build.ArtifactStagingDirectory)/frontend'
+      artifact: 'frontend'
+      publishLocation: 'pipeline'
