Add migrations to azure-pipelines-backend.yml for Azure Pipelines

--- a/azure-pipelines-backend.yml
+++ b/azure-pipelines-backend.yml
@@ -43,11 +43,21 @@ steps:
       projects: src/backend/ToDoList.WebApi/ToDoList.WebApi.csproj
       arguments: '--configuration Release -o $(Build.ArtifactStagingDirectory)/backend'
 
+  - task: DotNetCoreCLI@2
+    displayName: 'dotnet ef migrations script'
+    inputs:
+      command: 'custom'
+      custom: 'ef'
+      arguments: 'migrations script -i -o $(Build.ArtifactStagingDirectory)\migrate\scripts.sql --proejct src/backend/ToDoList.EntityFramework/ToDoList.EntityFramework.csproj --startup-project src/backend/ToDoList.WebApi/ToDoList.WebApi.csproj'
+
   - task: PublishPipelineArtifact@1
     inputs:
       targetPath: '$(Build.ArtifactStagingDirectory)/backend'
       artifact: 'backend'
       publishLocation: 'pipeline'
 
-
-
+  - task: PublishBuildArtifacts@1
+    inputs:
+      PathtoPublish: '$(Build.ArtifactStagingDirectory)\migrate'
+      ArtifactName: 'migration-scripts'
+      publishLocation: 'Container'
