Update azure-pipelines-backend.yml for Azure Pipelines

--- a/azure-pipelines-backend.yml
+++ b/azure-pipelines-backend.yml
@@ -45,6 +45,10 @@ steps:
 
   - task: CmdLine@2
     inputs:
+      script: 'dotnet tool install --global dotnet-ef'
+
+  - task: CmdLine@2
+    inputs:
       script: 'dotnet ef migrations script -i -o %BUILD_ARTIFACTSTAGINGDIRECTORY%\migrate\scripts.sql --proejct src/backend/ToDoList.EntityFramework/ToDoList.EntityFramework.csproj --startup-project src/backend/ToDoList.WebApi/ToDoList.WebApi.csproj'
   
   - task: PublishPipelineArtifact@1
